# flask-book-xss-IKT222

./: .dockerignore  .example.env  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt
flask_books_xss/: __init__.py  app.py  auth.py  db.py  listings.py  mfa.py  oauth.py  routes.py  schema.py  security.py  storage.py  users.py
flask_books_xss/models/: listing.py  user.py
flask_books_xss/templates/: base.html  index.html  login.html  my_listings.html  register.html
flask_books_xss/utils/: limiter.py  time.py
